src/chrome/userChrome.css
/* ... */
/*********************
   BURGER MENU STYLE
**********************/

#appMenu-multiView {
    background-color: var(--sidebar-background) !important;

    .panel-subview-body {
        padding: 4px 0 !important;
    }

    :not(#appMenu-mainView).PanelUI-subView {
        padding-bottom: 4px !important;
    }

    toolbarseparator {
        margin: 4px 0px !important;
        border-top: var(--border) !important;
    }

    toolbarseparator ~ .panel-subview-body {
        padding-top: 0px !important;
    }

    toolbarbutton, toolbaritem {
        margin: 0 4px !important;
    }
}

/*********************
 FLOATING URLBAR STYLE
**********************/

#urlbar-container:has(#urlbar[breakout-extend="true"]) {
    background-color: var(--tab-background) !important;

    #urlbar, .urlbarView, #urlbar-results {
        margin: 0 !important;
        padding: 0 !important;
    }

    * {
        border: none !important;
    }

    #urlbar {
        position: fixed !important;
        width: var(--floating-urlbar-width) !important;
        top: var(--urlbar-top-position) !important;
        left: calc(
            50vw - var(--floating-urlbar-width)/2 + var(--sidebar-width)/2
        ) !important;

        overflow: hidden !important;
        border: var(--border) !important;
        border-radius: var(--gap-radius) !important;
    }

    #urlbar-background {
        background-color: var(--sidebar-background) !important;
    }

    .urlbar-input-box {
        margin-left: 6px !important;
    }

    .urlbarView {
        width: 100% !important;
        padding: 4px 6px !important;
        border-top: var(--border) !important;
    }

    .urlbarView-row[has-url]not(:last-child) {
        margin-bottom: 4px !important;
    }

    .urlbarView-row[selected] {
        background-color: var(--tab-background) !important;
    }

    .urlbarView-row:hover {
        background-color: #3c3c3c !important;
    }

    #identity-box, .urlbarView-row[label], .search-one-offs {
        display: none !important;
    }
}


/*********************
      GAPS STYLE
**********************/

@media (-moz-bool-pref: "custom.sidebar.gaps") {
    #tabbrowser-tabbox,
    #sidebar-box {
        overflow: hidden !important;
        border-radius: var(--gap-radius) !important;
    }

    splitter#sidebar-splitter {
        width: var(--gap-size) !important;
        background-color: transparent !important;
    }

    #browser {
        left: var(--sidebar-width) !important;
        width: calc(100% - var(--sidebar-width)) !important;

        box-sizing: border-box !important;
        border: transparent var(--gap-size) solid !important;
    }
}

@media not (-moz-bool-pref: "custom.sidebar.compact") {
    #browser {
        border-left: none !important;
    }
}

/*********************
 COMPACT TOOLBOX STYLE
**********************/

@media (-moz-bool-pref: "custom.sidebar.compact") {
    #navigator-toolbox {
        height: 75vh !important;
        margin-top: 13vh !important;

        left: calc(
            -1 * var(--sidebar-width) - var(--compact-margin)
        ) !important;
        transition: left 0.15s ease !important;

        margin-left: var(--compact-margin) !important;
        border: 1px #373839 solid !important;
        border-radius: 6px !important;

        &:hover,
        &:has(#urlbar[focused=""]) {
            left: 0px !important;
        }

        &::before,
        &::after {
            content: "";
            height: 100%;
            position: absolute;
        }

        &::before {
            width: calc(2 * var(--sidebar-width));
            left: calc(-2 * var(--sidebar-width));
        }

        &::after {
            width: var(--compact-detection-width);
            left: calc(var(--sidebar-width) - 1px);
        }

        #nav-bar #urlbar-container {
            width: calc(var(--sidebar-width) - 2 * 7px) !important;
        }
    }

    #browser, #customization-container {
        left: 0 !important;
        width: 100% !important;
    }

    :not(:has(#customization-container[hidden])) #navigator-toolbox {
        left: 0px !important;
    }

    #customization-palette {
        margin-top: 20vh !important;
        margin-left: var(--sidebar-width) !important;
    }
}

/*********************
     BROWSER STYLE
**********************/

#browser {
    height: 100vh !important;
    width: 100vw !important;
    position: absolute !important;
    background: var(--sidebar-background) !important;
}

#browser, #customization-container {
    left: var(--sidebar-width) !important;
    width: calc(100% - var(--sidebar-width)) !important;
}

#sidebar-header, findbar, #sidebar-box, #customization-container, #tabbrowser-tabpanels {
    background: var(--secondary-background) !important;
}

#sidebar-header, findbar, #sidebar-splitter {
    border: none !important;
}

#sidebar-splitter {
    width: 2px !important;
}

#nav-bar[customizing] #urlbar-container,
#customization-container,
#wrapper-urlbar-container {
    position: absolute !important;
}

#nav-bar[customizing] {
    #urlbar-container {
        margin: 0px !important;
        left: 0px !important;
        top: 34px !important;
    }

    toolbarpaletteitem:first-child toolbaritem {
        padding: 0 !important;;
    }
}

#TabsToolbar[customizing] {
    margin-top: 38px !important;
}

#customization-container, #wrapper-urlbar-container {
    height: 100% !important;
}

#customization-palette-container {
    width: 100% !important;
}

#customization-panel-container {
    display: none !important;
}

